--- a/library.bib
+++ b/library.bib
@@ -1227,6 +1227,23 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2007},
 }
 
+@article{Mizuno2008,
+ abstract = {Quantitatively measuring the mechanical properties of soft matter over a wide range of length and time scales, especially if a sample is as complex as typical biological materials, remains challenging. Living cells present a further complication because forces are generated within these nonequilibrium materials that can change material properties. We have here developed high-bandwidth techniques for active one- and two-particle microrheology to tackle these issues. By combining active micromanipulation of probe particles with an optical trap with high-resolution tracking of thermal motions of the very same particles by laser interferometry, we can both measure the mechanical properties of and, at the same time, identify nonequilibrium forces in soft materials. In both simple liquids and equilibrium cytoskeletal actin networks, active microrheology (AMR) proves to be less noise sensitive than and offers extended bandwidth (0.1−100 kHz) compared to passive microrheology (PMR), which merely tracks thermal motions. We confirm high-frequency power-law dynamics in equilibrium actin networks with two-particle AMR and also discuss low-frequency local mechanical response near probe particles which shows up in one-particle AMR. The combination of AMR and PMR allowed us to quantify nonthermal force fluctuations in actin networks driven by myosin motor proteins. Our approach offers a new direct way to investigate the nonequilibrium dynamics of living materials.},
+ author = {Mizuno, D. and Head, D. A. and MacKintosh, F. C. and Schmidt, C. F.},
+ doi = {10.1021/ma801218z},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Mizuno et al/Mizuno et al. - 2008 - Macromolecules - Active and Passive Microrheology in Equilibrium and Nonequilibrium Systems.pdf:pdf},
+ isbn = {0024701017},
+ issn = {0024-9297},
+ journal = {Macromolecules},
+ link = {http://pubs.acs.org/doi/abs/10.1021/ma801218z},
+ month = {oct},
+ number = {19},
+ pages = {7194--7202},
+ title = {Active and Passive Microrheology in Equilibrium and Nonequilibrium Systems},
+ volume = {41},
+ year = {2008},
+}
+
 @article{Morone2006b,
  abstract = {Three-dimensional images of the undercoat structure on the cytoplasmic surface of the upper cell membrane of normal rat kidney fibroblast (NRK) cells and fetal rat skin keratinocytes were reconstructed by electron tomography, with 0.85-nm-thick consecutive sections made approximately 100 nm from the cytoplasmic surface using rapidly frozen, deeply etched, platinum-replicated plasma membranes. The membrane skeleton (MSK) primarily consists of actin filaments and associated proteins. The MSK covers the entire cytoplasmic surface and is closely linked to clathrin-coated pits and caveolae. The actin filaments that are closely apposed to the cytoplasmic surface of the plasma membrane (within 10.2 nm) are likely to form the boundaries of the membrane compartments responsible for the temporary confinement of membrane molecules, thus partitioning the plasma membrane with regard to their lateral diffusion. The distribution of the MSK mesh size as determined by electron tomography and that of the compartment size as determined from high speed single-particle tracking of phospholipid diffusion agree well in both cell types, supporting the MSK fence and MSK-anchored protein picket models.},
  author = {Morone, Nobuhiro and Fujiwara, Takahiro and Murase, Kotono and Kasai, Rinshi S and Ike, Hiroshi and Yuasa, Shigeki and Usukura, Jiro and Kusumi, Akihiro},
