--- a/library.bib
+++ b/library.bib
@@ -1140,6 +1140,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2012},
 }
 
+@article{Marcy2004,
+ abstract = {Dynamic actin networks generate forces for numerous types of movements such as lamellipodia protrusion or the motion of endocytic vesicles. The actin-based propulsive movement of Listeria monocytogenes or of functionalized microspheres have been extensively used as model systems to identify the biochemical components that are necessary for actin-based motility. However, quantitative force measurements are required to elucidate the mechanism of force generation, which is still under debate. To directly probe the forces generated in the process of actin-based propulsion, we developed a micromanipulation experiment. A comet growing from a coated polystyrene bead is held by a micropipette while the bead is attached to a force probe, by using a specially designed "flexible handle." This system allows us to apply both pulling and pushing external forces up to a few nanonewtons. By pulling the actin tail away from the bead at high speed, we estimate the elastic modulus of the gel and measure the force necessary to detach the tail from the bead. By applying a constant force in the range of -1.7 to 4.3 nN, the force-velocity relation is established. We find that the relation is linear for pulling forces and decays more weakly for pushing forces. This behavior is explained by using a dimensional elastic analysis.},
+ author = {Marcy, Yann and Prost, Jacques and Carlier, Marie-France and Sykes, C\'{e}cile},
+ doi = {10.1073/pnas.0307704101},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Marcy et al/Marcy et al. - 2004 - Proceedings of the National Academy of Sciences of the United States of America - Forces generated during actin-ba.pdf:pdf;:Users/matthiasbussonnier/Documents/Mendeley Desktop/Marcy et al/Marcy et al. - 2004 - Proceedings of the National Academy of Sciences of the United States of America - Forces generated during actin-b.html:html},
+ issn = {0027-8424},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ keyword = {Actins,Actins: physiology,Biophysical Phenomena,Biophysics,Microspheres},
+ link = {http://www.pnas.org/content/101/16/5992.abstract http://www.pnas.org/content/101/16/5992.full http://www.pnas.org/content/101/16/5992.full.pdf http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=395911\&tool=pmcentrez\&rendertype=abstract},
+ month = {apr},
+ number = {16},
+ pages = {5992--7},
+ pmid = {15079054},
+ shorttitle = {Forces generated during actin-based propulsion},
+ title = {Forces generated during actin-based propulsion: a direct measurement by micromanipulation.},
+ volume = {101},
+ year = {2004},
+}
+
 @article{McCullough2011,
  abstract = {The actin regulatory protein, cofilin, increases the bending and twisting elasticity of actin filaments and severs them. It has been proposed that filaments partially decorated with cofilin accumulate stress from thermally driven shape fluctuations at bare (stiff) and decorated (compliant) boundaries, thereby promoting severing. This mechanics-based severing model predicts that changes in actin filament compliance due to cofilin binding affect severing activity. Here, we test this prediction by evaluating how the severing activities of vertebrate and yeast cofilactin scale with the flexural rigidities determined from analysis of shape fluctuations. Yeast actin filaments are more compliant in bending than vertebrate actin filaments. Severing activities of cofilactin isoforms correlate with changes in filament flexibility. Vertebrate cofilin binds but does not increase the yeast actin filament flexibility, and does not sever them. Imaging of filament thermal fluctuations reveals that severing events are associated with local bending and fragmentation when deformations attain a critical angle. The critical severing angle at boundaries between bare and cofilin-decorated segments is smaller than in bare or fully decorated filaments. These measurements support a cofilin-severing mechanism in which mechanical asymmetry promotes local stress accumulation and fragmentation at boundaries of bare and cofilin-decorated segments, analogous to failure of some nonprotein materials. ?? 2011 Biophysical Society.},
  author = {McCullough, Brannon R. and Grintsevich, Elena E. and Chen, Christine K. and Kang, Hyeran and Hutchison, Alan L. and Henn, Arnon and Cao, Wenxiang and Suarez, Cristian and Martiel, Jean Louis and Blanchoin, Laurent and Reisler, Emil and {De La Cruz}, Enrique M.},
