only 2 weeks left !

--- a/library.bib
+++ b/library.bib
@@ -907,6 +907,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2010},
 }
 
+@article{Jaalouk2009,
+ abstract = {Cells sense their physical surroundings through mechanotransduction - that is, by translating mechanical forces and deformations into biochemical signals such as changes in intracellular calcium concentration or by activating diverse signalling pathways. In turn, these signals can adjust cellular and extracellular structure. This mechanosensitive feedback modulates cellular functions as diverse as migration, proliferation, differentiation and apoptosis, and is crucial for organ development and homeostasis. Consequently, defects in mechanotransduction - often caused by mutations or misregulation of proteins that disturb cellular or extracellular mechanics - are implicated in the development of various diseases, ranging from muscular dystrophies and cardiomyopathies to cancer progression and metastasis.},
+ author = {Jaalouk, Diana E and Lammerding, Jan},
+ doi = {10.1038/nrm2597},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Jaalouk, Lammerding/Jaalouk, Lammerding - 2009 - Nature reviews. Molecular cell biology - Mechanotransduction gone awry.pdf:pdf},
+ isbn = {1471-0080 (Electronic)$\backslash$n1471-0072 (Linking)},
+ issn = {1471-0080},
+ journal = {Nature reviews. Molecular cell biology},
+ keyword = {Aging,Animals,Cardiomegaly,Cardiomegaly: physiopathology,Cellular,Cellular: physiology,Humans,Mechanotransduction,Muscular Dystrophies,Muscular Dystrophies: physiopathology,Mutation,Neoplasms,Neoplasms: physiopathology,Premature,Premature: physiopathology},
+ link = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2668954\&tool=pmcentrez\&rendertype=abstract},
+ month = {jan},
+ number = {1},
+ pages = {63--73},
+ pmid = {19197333},
+ title = {Mechanotransduction gone awry.},
+ volume = {10},
+ year = {2009},
+}
+
 @article{Jahnel2011,
  abstract = {The use of optical traps to measure or apply forces on the molecular level requires a precise knowledge of the trapping force field. Close to the trap center, this field is typically approximated as linear in the displacement of the trapped microsphere. However, applications demanding high forces at low laser intensities can probe the light-microsphere interaction beyond the linear regime. Here, we measured the full nonlinear force and displacement response of an optical trap in two dimensions using a dual-beam optical trap setup with back-focal-plane photodetection. We observed a substantial stiffening of the trap beyond the linear regime that depends on microsphere size, in agreement with Mie theory calculations. Surprisingly, we found that the linear detection range for forces exceeds the one for displacement by far. Our approach allows for a complete calibration of an optical trap.},
  author = {Jahnel, Marcus and Behrndt, Martin and Jannasch, Anita and Sch\"{a}ffer, Erik and Grill, Stephan W.},
@@ -1613,6 +1632,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Searching for a function for nuclear actin.},
  volume = {10},
  year = {2000},
+}
+
+@article{Reymann2010,
+ abstract = {Actin filaments constitute one of the main components of cell cytoskeleton. Assembled into bundles in filopodia or in stress fibres, they play a pivotal role in eukaryotes during cell morphogenesis, adhesion and motility. The bundle emergence has been extensively related to specific actin regulators in vivo. Such dynamic modulation was also highlighted by biochemical reconstitution of the actin-network assembly, in bulk solution or with biomimetic devices. However, the question of how geometrical boundaries, such as those encountered in cells, affect the dynamic formation of highly ordered actin structures remains poorly studied. Here we demonstrate that the nucleation geometry in itself can be the principal determinant of actin-network architecture. We developed a micropatterning method that enables the spatial control of actin nucleation sites for in vitro assays. Shape, orientation and distance between nucleation regions control filament orientation and length, filament-filament interactions and filopodium-like bundle formation. Modelling of filament growth and interactions demonstrates that basic mechanical and probabilistic laws govern actin assembly in higher-order structures.},
+ author = {Reymann, Anne-C\'{e}cile and Martiel, Jean-Louis and Cambier, Th\'{e}o and Blanchoin, Laurent and Boujemaa-Paterski, Rajaa and Th\'{e}ry, Manuel},
+ doi = {10.1038/nmat2855},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Reymann et al/Reymann et al. - 2010 - Nature materials - Nucleation geometry governs ordered actin networks structures.pdf:pdf},
+ isbn = {1476-1122 (Print)$\backslash$r1476-1122 (Linking)},
+ issn = {1476-1122},
+ journal = {Nature materials},
+ keyword = {Actin Cytoskeleton,Actin Cytoskeleton: chemistry,Actin Cytoskeleton: ultrastructure,Actins,Actins: chemistry,Actins: metabolism,Cell Movement,Models,Molecular},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/20852617},
+ month = {oct},
+ number = {10},
+ pages = {827--32},
+ pmid = {20852617},
+ title = {Nucleation geometry governs ordered actin networks structures.},
+ volume = {9},
+ year = {2010},
 }
 
 @article{Reymann2012,
