fin chapitre actin cloud

--- a/library.bib
+++ b/library.bib
@@ -1422,6 +1422,24 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2007},
 }
 
+@article{Pagliara2014,
+ abstract = {Embryonic stem cells (ESCs) self-renew in a state of na\"{\i}ve pluripotency in which they are competent to generate all somatic cells. It has been hypothesized that, before irreversibly committing, ESCs pass through at least one metastable transition state. This transition would represent a gateway for differentiation and reprogramming of somatic cells. Here, we show that during the transition, the nuclei of ESCs are auxetic: they exhibit a cross-sectional expansion when stretched and a cross-sectional contraction when compressed, and their stiffness increases under compression. We also show that the auxetic phenotype of transition ESC nuclei is driven at least in part by global chromatin decondensation. Through the regulation of molecular turnover in the differentiating nucleus by external forces, auxeticity could be a key element in mechanotransduction. Our findings highlight the importance of nuclear structure in the regulation of differentiation and reprogramming.},
+ author = {Pagliara, Stefano and Franze, Kristian and McClain, Crystal R and Wylde, George W and Fisher, Cynthia L and Franklin, Robin J M and Kabla, Alexandre J and Keyser, Ulrich F and Chalut, Kevin J},
+ doi = {10.1038/nmat3943},
+ issn = {1476-1122},
+ journal = {Nature materials},
+ link = {http://dx.doi.org/10.1038/nmat3943 http://www.ncbi.nlm.nih.gov/pubmed/24747782},
+ month = {jun},
+ number = {6},
+ pages = {638--44},
+ pmid = {24747782},
+ publisher = {Nature Publishing Group},
+ shorttitle = {Nat Mater},
+ title = {Auxetic nuclei in embryonic stem cells exiting pluripotency.},
+ volume = {13},
+ year = {2014},
+}
+
 @article{Parekh2005,
  abstract = {Directional polymerization of actin filaments in branched networks is one of the most powerful force-generating systems in eukaryotic cells. Growth of densely cross-linked actin networks drives cell crawling, intracellular transport of vesicles and organelles, and movement of intracellular pathogens such as Listeria monocytogenes. Using a modified atomic force microscope (AFM), we obtained force-velocity (Fv) measurements of growing actin networks in vitro until network elongation ceased at the stall force. We found that the growth velocity of a branched actin network against increasing forces is load-independent over a wide range of forces before a convex decline to stall. Surprisingly, when force was decreased on a growing network, the velocity increased to a value greater than the previous velocity, such that two or more stable growth velocities can exist at a single load. These results demonstrate that a single Fv relationship does not capture the complete behaviour of this system, unlike other molecular motors in cells, because the growth velocity depends on loading history rather than solely on the instantaneous load.},
  author = {Parekh, Sapun H and Chaudhuri, Ovijit and Theriot, Julie A and Fletcher, Daniel A},
