move forward on doblets

--- a/library.bib
+++ b/library.bib
@@ -69,6 +69,20 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2010},
 }
 
+@article{Angelova1986,
+ abstract = {Liposome formation and lipid swelling on platinum electrodes in distilled water and water solutions in d.c. electrical fields have been investigated for different amounts of a negatively charged lipid (mixture from 71\% PC, 21.5\% PE and 7.5\% PS), and a neutral lipid (DMPC). Negatively charged lipids do not form liposomes without field when the thickness of the dried lipid layer is of the order or less than that corresponding to 90 bilayers. The rate and extent of swelling of layers thicker than 90 bilayers is largest on the cathode, smaller without fields and smallest on the anode. The theory, based on the assumption that osmotic and electrostatic forces drive lipid swelling and liposome formation, is in semi-quantitative agreement with the experimental data; in particular, it gives the observed linear dependence of the rate of swelling on the inverse lipid layer thickness. To induce liposome formation for layers thinner than 90 bilayers it was necessary to apply a negative potential which is proportional to the logarithm of the inversed layer thickness. The characteristic critical potential is proportional to RTk/F; R being the gas constant, Tk the absolute temperature and F the Faraday constant. This indicates that redistribution of counterions may be the cause which increases the repulsive electrostatic intermembrane forces to overcome van der Waals attraction. For thicknesses below 10 bilayers, formation of very thin-walled liposomes of narrow size distribution and mean diameter of the order of 30 pm was observed. These liposomes grow in size before detachment and a formula for the kinetics of growth has been derived, which is in very good agreement with the experimental data. The effects of d.c. fields on DMPC swelling are smaller and lead to formation of liposome-like structures of different appearence. Bilayer separation and bending are pre- requisites for liposome formation from hydrating lipids. Therefore, a poss- ible molecular mechanism is that membranes should be destabilized to bend and fuse to form liposomes. This requires the right proportion between structured regions, in the form of bilayers, and defects and/or non-bilayer structures, and in many cases external constraints, in particular, electrical fields.},
+ author = {Angelova, Miglena I. and Dimitrov, Dimiter S.},
+ doi = {10.1039/dc9868100303},
+ isbn = {0301-7249},
+ issn = {0301-7249},
+ journal = {Faraday Discussions of the Chemical Society},
+ link = {http://xlink.rsc.org/?DOI=dc9868100303},
+ pages = {303},
+ title = {Liposome electroformation},
+ volume = {81},
+ year = {1986},
+}
+
 @article{Azoury2011,
  abstract = {Female meiotic divisions are extremely asymmetric, giving rise to a large oocyte and small degenerating polar bodies, keeping the maternal stores for further embryo development. This asymmetry is achieved via off-center positioning of the division spindle. Mouse oocytes have developed a formin-2-dependent actin-based spindle positioning mechanism that allows the meiotic spindle to migrate towards the closest cortex. Using spinning disk microscopy and FRAP analysis, we studied the changes in the organization of the cytoplasmic F-actin meshwork during the first meiotic division. It is very dense in prophase I, undergoes a significant density drop upon meiosis resumption and reforms progressively later on. This meshwork remodeling correlates with endogenous formin 2 regulation. High formin 2 levels at meiosis I entry induce meshwork maintenance, leading to equal forces being exerted on the chromosomes, preventing spindle migration. Hence, the meshwork density drop at meiosis resumption is germane to the symmetry-breaking event required for successful asymmetric meiotic divisions.},
  author = {Azoury, Jessica and Lee, Karen Wingman and Georget, Virginie and Hikal, Pascale and Verlhac, Marie-H\'{e}l\`{e}ne},
@@ -407,6 +421,23 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Reversible stress softening of actin networks.},
  volume = {445},
  year = {2007},
+}
+
+@article{Clark2013,
+ abstract = {Animal cell shape is controlled primarily by the actomyosin cortex, a thin cytoskeletal network that lies directly beneath the plasma membrane. The cortex regulates cell morphology by controlling cellular mechanical properties, which are determined by network structure and geometry. In particular, cortex thickness is expected to influence cell mechanics. However, cortex thickness is near the resolution limit of the light microscope, making studies relating cortex thickness and cell shape challenging. To overcome this, we developed an assay to measure cortex thickness in live cells, combining confocal imaging and subresolution image analysis. We labeled the actin cortex and plasma membrane with chromatically different fluorophores and measured the distance between the resulting intensity peaks. Using a theoretical description of cortex geometry and microscopic imaging, we extracted an average cortex thickness of ∼190 nm in mitotic HeLa cells and tested the validity of our assay using cell images generated in silico. We found that thickness increased after experimental treatments preventing F-actin disassembly. Finally, we monitored physiological changes in cortex thickness in real-time during actin cortex regrowth in cellular blebs. Our investigation paves the way to understanding how molecular processes modulate cortex structure, which in turn drives cell morphogenesis.},
+ author = {Clark, Andrew G. and Dierkes, Kai and Paluch, Ewa K.},
+ doi = {10.1016/j.bpj.2013.05.057},
+ issn = {1542-0086},
+ journal = {Biophysical journal},
+ keyword = {Actin Cytoskeleton,Actin Cytoskeleton: metabolism,Actin Cytoskeleton: ultrastructure,Actins,Actins: genetics,Actins: metabolism,Cell Membrane,Cell Membrane: metabolism,Cell Membrane: ultrastructure,Confocal,Fluorescence,Green Fluorescent Proteins,Green Fluorescent Proteins: genetics,Green Fluorescent Proteins: metabolism,HeLa Cells,Humans,Microscopy},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/23931305},
+ month = {aug},
+ number = {3},
+ pages = {570--80},
+ pmid = {23931305},
+ title = {Monitoring actin cortex thickness in live cells.},
+ volume = {105},
+ year = {2013},
 }
 
 @article{Coburn2013,
@@ -1719,11 +1750,27 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  link = {http://www.sciencedirect.com/science/article/pii/S0962892412001110 http://www.ncbi.nlm.nih.gov/pubmed/22871642},
  month = {oct},
  number = {10},
- pages = {536--545},
+ pages = {536--45},
  pmid = {22871642},
- title = {Actin cortex mechanics and cellular morphogenesis},
+ title = {Actin cortex mechanics and cellular morphogenesis.},
  volume = {22},
  year = {2012},
+}
+
+@article{Sandre1999,
+ abstract = {We image macroscopic transient pores in mechanically stretched giant vesicles. Holes open above a critical radius r(c1), grow up to a radius r(c2), and close. We interpret the upper limit r(c2) by a relaxation of the membrane tension as the holes expand. The closing of the holes is caused by a further relaxation of the surface tension when the internal liquid leaks out. A dynamic model fits our data for the growth and closure of pores.},
+ author = {Sandre, O and Moreaux, L and Brochard-Wyart, F},
+ issn = {0027-8424},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ keyword = {Cell Membrane Permeability,Electrophysiology,Glycerol,Glycerol: pharmacology,Lipid Bilayers,Lipid Bilayers: chemistry,Membrane Potentials,Membranes, Artificial,Models, Biological,Models, Theoretical,Polylysine,Polylysine: chemistry,Surface Properties,Time Factors},
+ link = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=17927\&tool=pmcentrez\&rendertype=abstract},
+ month = {sep},
+ number = {19},
+ pages = {10591--6},
+ pmid = {10485870},
+ title = {Dynamics of transient pores in stretched vesicles.},
+ volume = {96},
+ year = {1999},
 }
 
 @article{Schafer2004,
@@ -1824,6 +1871,39 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  title = {Three-color single molecule imaging shows WASP detachment from Arp2/3 complex triggers actin filament branch formation.},
  volume = {2},
  year = {2013},
+}
+
+@article{SoareseSilva2011,
+ abstract = {In cells, many vital processes involve myosin-driven motility that actively remodels the actin cytoskeleton and changes cell shape. Here we study how the collective action of myosin motors organizes actin filaments into contractile structures in a simplified model system devoid of biochemical regulation. We show that this self-organization occurs through an active multistage coarsening process. First, motors form dense foci by moving along the actin network structure followed by coalescence. Then the foci accumulate actin filaments in a shell around them. These actomyosin condensates eventually cluster due to motor-driven coalescence. We propose that the physical origin of this multistage aggregation is the highly asymmetric load response of actin filaments: they can support large tensions but buckle easily under piconewton compressive loads. Because the motor-generated forces well exceed this threshold, buckling is induced on the connected actin network that resists motor-driven filament sliding. We show how this buckling can give rise to the accumulation of actin shells around myosin foci and subsequent coalescence of foci into superaggregates. This new physical mechanism provides an explanation for the formation and contractile dynamics of disordered condensed actomyosin states observed in vivo.},
+ author = {{Soares e Silva}, Marina and Depken, Martin and Stuhrmann, Bj\"{o}rn and Korsten, Marijn and MacKintosh, Fred C and Koenderink, Gijsje H},
+ doi = {10.1073/pnas.1016616108},
+ issn = {1091-6490},
+ journal = {Proceedings of the National Academy of Sciences of the United States of America},
+ keyword = {Actin Cytoskeleton,Actin Cytoskeleton: chemistry,Actin Cytoskeleton: physiology,Actins,Actins: chemistry,Actins: physiology,Actomyosin,Actomyosin: chemistry,Actomyosin: physiology,Algorithms,Animals,Cell Movement,Cell Movement: physiology,Humans,Microscopy, Confocal,Microscopy, Fluorescence,Models, Biological,Models, Chemical,Muscle Contraction,Muscle Contraction: physiology,Myosins,Myosins: chemistry,Myosins: physiology},
+ link = {http://www.pnas.org/content/108/23/9408},
+ month = {jun},
+ number = {23},
+ pages = {9408--13},
+ pmid = {21593409},
+ title = {Active multistage coarsening of actin networks driven by myosin motors.},
+ volume = {108},
+ year = {2011},
+}
+
+@article{Soeno1998,
+ abstract = {beta-actinin (CapZ) is a heterodimeric actin-binding protein which caps the barbed end of action filaments and nucleates actin-polymerization in a Ca2+ -independent manner. In myofibrils it is localized in the Z-lines. As judged by these properties of b-actinin, it is conceivable that beta-actinin is involved in the regulation of actin assembly, especially in the formation of I-Z-I complex during myofribrillogenesis. In this study, we devised a system to produce functional beta-actinin in E. Coli. The cDNAs of beta I' and beta II subunits of beta-actinin were obtained by RT-PCR methods using the published sequence as references, and subcloned in a pET vector. When the proteins were produced with the cDNA of either beta I' and beta II in E. coli, the proteins were insoluble and non-functional. However, when the cDNAs encoding the two subunits were cloned into a single vector and both proteins were expressed simultaneously, the proteins became soluble and purified as a functional heterodimer The activity of the purified proteins was not distinguishable from that of beta-actinin purified from skeletal muscle.},
+ author = {Soeno, Y and Abe, H and Kimura, S and Maruyama, K and Obinata, T},
+ issn = {0142-4319},
+ journal = {Journal of muscle research and cell motility},
+ keyword = {Actinin,Actinin: biosynthesis,Actinin: genetics,Actinin: physiology,Actins,Actins: metabolism,Animals,CapZ Actin Capping Protein,Chick Embryo,Escherichia coli,Escherichia coli: genetics,Gene Expression,Genetic Vectors,Genetic Vectors: metabolism,Microfilament Proteins,Muscle Proteins,Muscle Proteins: biosynthesis,Muscle Proteins: genetics,Muscle Proteins: physiology,Myofibrils,Myofibrils: chemistry,Protein Binding,Recombinant Proteins,Recombinant Proteins: biosynthesis,Recombinant Proteins: metabolism},
+ link = {http://www.ncbi.nlm.nih.gov/pubmed/9742448},
+ month = {aug},
+ number = {6},
+ pages = {639--46},
+ pmid = {9742448},
+ title = {Generation of functional beta-actinin (CapZ) in an E. coli expression system.},
+ volume = {19},
+ year = {1998},
 }
 
 @article{Solmaz2012,
