some correction timo

--- a/library.bib
+++ b/library.bib
@@ -1009,6 +1009,25 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  year = {2012},
 }
 
+@article{Krieg2008,
+ abstract = {Understanding the factors that direct tissue organization during development is one of the most fundamental goals in developmental biology. Various hypotheses explain cell sorting and tissue organization on the basis of the adhesive and mechanical properties of the constituent cells. However, validating these hypotheses has been difficult due to the lack of appropriate tools to measure these parameters. Here we use atomic force microscopy (AFM) to quantify the adhesive and mechanical properties of individual ectoderm, mesoderm and endoderm progenitor cells from gastrulating zebrafish embryos. Combining these data with tissue self-assembly in vitro and the sorting behaviour of progenitors in vivo, we have shown that differential actomyosin-dependent cell-cortex tension, regulated by Nodal/TGFbeta-signalling (transforming growth factor beta), constitutes a key factor that directs progenitor-cell sorting. These results demonstrate a previously unrecognized role for Nodal-controlled cell-cortex tension in germ-layer organization during gastrulation.},
+ author = {Krieg, M and Arboleda-Estudillo, Y and Puech, P-H and K\"{a}fer, J and Graner, F and M\"{u}ller, D J and Heisenberg, C-P},
+ doi = {10.1038/ncb1705},
+ issn = {1476-4679},
+ journal = {Nature cell biology},
+ keyword = {Animals,Body Patterning,Body Patterning: physiology,Cell Adhesion,Cell Adhesion: physiology,Cell Aggregation,Cell Aggregation: physiology,Cytoskeleton,Cytoskeleton: metabolism,Cytoskeleton: ultrastructure,Germ Layers,Germ Layers: physiology,Germ Layers: ultrastructure,Microscopy, Atomic Force,Nodal Protein,Oligonucleotides, Antisense,Oligonucleotides, Antisense: genetics,Oligonucleotides, Antisense: metabolism,Signal Transduction,Signal Transduction: physiology,Stem Cells,Stem Cells: cytology,Stem Cells: physiology,Stress, Mechanical,Transforming Growth Factor beta,Transforming Growth Factor beta: genetics,Transforming Growth Factor beta: metabolism,Zebrafish,Zebrafish Proteins,Zebrafish Proteins: genetics,Zebrafish Proteins: metabolism,Zebrafish: embryology},
+ link = {http://dx.doi.org/10.1038/ncb1705},
+ month = {apr},
+ number = {4},
+ pages = {429--36},
+ pmid = {18364700},
+ publisher = {Nature Publishing Group},
+ shorttitle = {Nat Cell Biol},
+ title = {Tensile forces govern germ-layer organization in zebrafish.},
+ volume = {10},
+ year = {2008},
+}
+
 @article{Lecuit2011,
  abstract = {Cell shape changes underlie a large set of biological processes ranging from cell division to cell motility. Stereotyped patterns of cell shape changes also determine tissue remodeling events such as extension or invagination. In vitro and cell culture systems have been essential to understanding the fundamental physical principles of subcellular mechanics. These are now complemented by studies in developing organisms that emphasize how cell and tissue morphogenesis emerge from the interplay between force-generating machines, such as actomyosin networks, and adhesive clusters that transmit tensile forces at the cell cortex and stabilize cell-cell and cell-substrate interfaces. Both force production and transmission are self-organizing phenomena whose adaptive features are essential during tissue morphogenesis. A new era is opening that emphasizes the similarities of and allows comparisons between distant dynamic biological phenomena because they rely on core machineries that control universal features of cytomechanics.},
  author = {Lecuit, Thomas and Lenne, Pierre-Fran\c{c}ois and Munro, Edwin},
@@ -1760,6 +1779,7 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
 @article{Sandre1999,
  abstract = {We image macroscopic transient pores in mechanically stretched giant vesicles. Holes open above a critical radius r(c1), grow up to a radius r(c2), and close. We interpret the upper limit r(c2) by a relaxation of the membrane tension as the holes expand. The closing of the holes is caused by a further relaxation of the surface tension when the internal liquid leaks out. A dynamic model fits our data for the growth and closure of pores.},
  author = {Sandre, O and Moreaux, L and Brochard-Wyart, F},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Sandre, Moreaux, Brochard-Wyart/Sandre, Moreaux, Brochard-Wyart - 1999 - Proceedings of the National Academy of Sciences of the United States of America - Dynamics of t.pdf:pdf},
  issn = {0027-8424},
  journal = {Proceedings of the National Academy of Sciences of the United States of America},
  keyword = {Cell Membrane Permeability,Electrophysiology,Glycerol,Glycerol: pharmacology,Lipid Bilayers,Lipid Bilayers: chemistry,Membrane Potentials,Membranes, Artificial,Models, Biological,Models, Theoretical,Polylysine,Polylysine: chemistry,Surface Properties,Time Factors},
@@ -1877,6 +1897,7 @@ DOI: [http://dx.doi.org/10.7554/eLife.01433.002][1]
  abstract = {In cells, many vital processes involve myosin-driven motility that actively remodels the actin cytoskeleton and changes cell shape. Here we study how the collective action of myosin motors organizes actin filaments into contractile structures in a simplified model system devoid of biochemical regulation. We show that this self-organization occurs through an active multistage coarsening process. First, motors form dense foci by moving along the actin network structure followed by coalescence. Then the foci accumulate actin filaments in a shell around them. These actomyosin condensates eventually cluster due to motor-driven coalescence. We propose that the physical origin of this multistage aggregation is the highly asymmetric load response of actin filaments: they can support large tensions but buckle easily under piconewton compressive loads. Because the motor-generated forces well exceed this threshold, buckling is induced on the connected actin network that resists motor-driven filament sliding. We show how this buckling can give rise to the accumulation of actin shells around myosin foci and subsequent coalescence of foci into superaggregates. This new physical mechanism provides an explanation for the formation and contractile dynamics of disordered condensed actomyosin states observed in vivo.},
  author = {{Soares e Silva}, Marina and Depken, Martin and Stuhrmann, Bj\"{o}rn and Korsten, Marijn and MacKintosh, Fred C and Koenderink, Gijsje H},
  doi = {10.1073/pnas.1016616108},
+ file = {:Users/matthiasbussonnier/Documents/Mendeley Desktop/Soares e Silva et al/Soares e Silva et al. - 2011 - Proceedings of the National Academy of Sciences of the United States of America - Active multistage coars.pdf:pdf},
  issn = {1091-6490},
  journal = {Proceedings of the National Academy of Sciences of the United States of America},
  keyword = {Actin Cytoskeleton,Actin Cytoskeleton: chemistry,Actin Cytoskeleton: physiology,Actins,Actins: chemistry,Actins: physiology,Actomyosin,Actomyosin: chemistry,Actomyosin: physiology,Algorithms,Animals,Cell Movement,Cell Movement: physiology,Humans,Microscopy, Confocal,Microscopy, Fluorescence,Models, Biological,Models, Chemical,Muscle Contraction,Muscle Contraction: physiology,Myosins,Myosins: chemistry,Myosins: physiology},
